--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "bugs": {
     "url": "https://github.com/ashokcodes/metron/issues"
   },
-  "homepage": "https://github.com/ashokcodes/metron#readme"
+  "homepage": "https://github.com/ashokcodes/metron#readme",
+  "dependencies": {
+    "mysql": "^2.18.1"
+  }
 }
